	* Fix detecting file transfer proxies advertised by the server.
	* Advertise support for Google Talk's JID Domain Discovery extension
	  in all cases again (changed in 2.7.0), not just when the domain
	  is "gmail.com" or "googlemail.com" (it's also needed for Google
	  Talk used for accounts on arbitrary domains not using Google Apps
	  for Your Domain). (#a14153)

	Yahoo/Yahoo JAPAN:
	* Stop doing unnecessary lookups of certain alias information.  This
	  solves deadlocks when a given Yahoo account has a ridiculously large
	  (>500 buddies) list and may improve login speed for those on slow
	  connections. (#12532)
	* Fix sending SMS messages.  The lookup host changed on us.  (Thanks to
	  todo) (#12688).

version 2.7.3 (08/10/2010):
	General:
	* Use silent build rules for automake >1.11. You can enable verbose
	  builds with the --disable-silent-rules configure option, or using
	  make V=1.

	libpurple:
	* Fix the TURN server settings (broken in 2.7.0).

	Pidgin:
	* Re-focus the input area after clicking the attention toolbar button.
	* Re-arrange media window to make it more netbook-friendly.

	Finch:
	* Rebindable 'suggest-next-page' and 'suggest-prev-page' actions for
	  textboxes (GntEntry) to scroll through list of suggestions.
	* Rebindable 'dropdown' action for comboboxes (GntComboBox) to show the
	  dropdown list of options.

	IRC:
	* Fix non-ASCII arguments to /mode et al.  (thanks to Max Ulidtko)

	MSN:
	* Support for web-based buddy icons, used when a buddy logs in to the
	  messenger on the Live website.
	* Fix file transfers with some clients that don't support direct
	  connections (e.g., papyon, telepathy-butterfly, etc.) (#12150)

	MXit:
	* Fix filename for the Shocked emoticon. (#12364)
	* Implement the new naming conventions where possible. (MXitId, etc)
	* Display a message in the Groupchat window when you invite somebody.
	* Birthday field in profile cannot be edited when server says it is
	  locked.